<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idNome"
        android:layout_width="382dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/idContato"
        android:layout_width="382dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/telefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNome"
        android:autofillHints="" />

    <RatingBar
        android:id="@+id/idRating"
        android:layout_width="236dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:rating="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idContato" />

    <ImageButton
        android:id="@+id/idBotao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/salvar"
        android:onClick="salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adicionar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRecycle"
        android:layout_width="409dp"
        android:layout_height="356dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idRating" />

</androidx.constraintlayout.widget.ConstraintLayout>